# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-19 09:35:21 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-36

    Summary:
      merge logout page from herve (#164)
    Revision:
      itools--main--0.12--patch-36

    Patches applied:
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-24
       provide a logout page.
    

    new files:
     cms/ui/.arch-ids/WebSite_logout.xml.en.id
     cms/ui/WebSite_logout.xml.en

    modified files:
     Changelog cms/WebSite.py

    new patches:
     herve@oursours.net--public/itools--aruni--0.12--patch-24


2005-11-19 09:30:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-35

    Summary:
      cms, register the root handler class too
    Revision:
      itools--main--0.12--patch-35


    modified files:
     Changelog cms/Root.py


2005-11-18 23:31:28 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-34

    Summary:
      fix FSF address (#180)
    Revision:
      itools--main--0.12--patch-34


    modified files:
     Changelog LGPL-2.1 README.txt __init__.py catalog/Analysers.py
     catalog/Catalog.py catalog/IDocument.py catalog/IIndex.py
     catalog/IO.py catalog/Query.py catalog/__init__.py
     catalog/prof.py catalog/test.py catalog/test_analysers.py
     catalog/test_io.py cms/Document.py cms/File.py cms/Folder.py
     cms/Group.py cms/Handler.py cms/LocaleAware.py cms/Metadata.py
     cms/Root.py cms/User.py cms/UserFolder.py cms/WebSite.py
     cms/__init__.py cms/access.py cms/catalog.py cms/csv_.py
     cms/debug.py cms/examples/portal1/Root.py
     cms/examples/portal1/__init__.py cms/examples/portal1/setup.py
     cms/flash.py cms/html.py cms/images.py cms/msoffice.py
     cms/openoffice.py cms/pdf.py cms/skins.py cms/text.py
     cms/utils.py cms/versioning.py cms/widgets.py cms/workflow.py
     csv/__init__.py csv/itools_csv.py csv/test_itools_csv.py